--- a/wp-content/themes/sanger/assets/css/responsive.css
+++ b/wp-content/themes/sanger/assets/css/responsive.css
@@ -9,12 +9,12 @@
     padding-left: 35px;
   }
 
-  .header-nav__menu li a:hover::after {
+  .header-nav__menu li a:hover span:not(span.toggle-drop-submenu)::after {
     width: 100%;
     background-color: var(--color-text_dark);
   }
 
-  .header-nav__menu .sub-menu li a:hover::after {
+  .header-nav__menu .sub-menu li a:hover span:not(span.toggle-drop-submenu)::after {
     background-color: #fff;
   }
 
@@ -86,6 +86,14 @@
   .hm-section-5__img-ins:hover::before {
     opacity: 1;
   }
+
+  .panel-bar__social ul li a:hover {
+    opacity: 0.7;
+  }
+
+  .panel-bar__close-btn:hover .paner-bar__close-icon {
+    transform: rotate(90deg);
+  }
 }
 
 @media (max-width: 1279px) {
@@ -129,6 +137,110 @@
 
   .font-secondary-medium-06 {
     font-size: calc(1rem + 0.65vw);
+  }
+
+  .panel-bar__contact {
+    display: none;
+  }
+
+  .panel-bar-menu-wrap {
+    display: block;
+    overflow-y: auto;
+  }
+
+  .panel-bar-menu-wrap::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(160, 160, 160, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(160, 160, 160, 0.3);
+    background-color: #f5f5f5;
+  }
+  
+  .panel-bar-menu-wrap::-webkit-scrollbar {
+    width: 10px;
+    background-color: #c4c4c4;
+  }
+  
+  .panel-bar-menu-wrap::-webkit-scrollbar-thumb {
+    background-color: #c4c4c4;
+    border: 1px solid #fff;
+  }
+
+  .panel-bar__social ul li:not(:first-child) {
+    margin-top: 0;
+  }
+
+  .panel-bar__social ul li,
+  .panel-bar__social ul li a {
+    width: auto;
+  }
+
+  .panel-bar__social ul li .social__item-name {
+    display: none;
+  }
+
+  .panel-bar__social ul li a i {
+    text-align: center;
+    line-height: 2em;
+  }
+
+  .panel-bar__menu > li > a {
+    font-size: 24px;
+    font-family: var(--font-secondary-regular);
+    font-weight: 500;
+    display: block;
+    position: relative;
+  }
+
+  .panel-bar__menu li.menu-item-has-children > a {
+    padding-right: 30px;
+  }
+
+  .panel-bar__menu li.menu-item-has-children > a .toggle-drop-submenu {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    width: 30px;
+    text-align: center;
+    -webkit-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;  
+  }
+
+  .panel-bar__menu li.menu-item-has-children > a .toggle-drop-submenu::before {
+    font-family: "fontello";
+    font-weight: normal;
+  }
+
+  .panel-bar__menu > li.menu-item-has-children > a .toggle-drop-submenu::before {
+    content: '\e9a4';
+    font-size: 19px;
+  }
+
+  .panel-bar__menu .sub-menu li.menu-item-has-children > a .toggle-drop-submenu::before {
+    content: '\e836';
+    font-size: 19px;
+  }
+
+  .menu-item-has-children .sub-menu li.menu-item-has-children > a::before {
+    content: none;
+  }
+
+  .menu-item-has-children .sub-menu li a:hover {
+    color: #000;
+    opacity: 0.8;
+  }
+
+  .header-nav__menu .sub-menu li a:hover span:not(span.toggle-drop-submenu)::after {
+    background-color: #000;
+  }
+
+  .menu-item-has-children .sub-menu li:first-child {
+    margin-top: 0;
+  }
+
+  .menu-item-has-children .sub-menu li:last-child {
+    margin-bottom: 0;
   }
 }
 
@@ -231,6 +343,16 @@
 
   .footer-social .social {
     justify-content: center;
+  }
+
+  .panel-bar__inner {
+    padding: 30px;
+  }
+  
+  .panel-bar {
+    width: 100%;
+    max-width: 400px;
+    right: calc(-100% - 50px);
   }
 }
 
